# cpp-template

./: CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build-and-test.yml
tests/: CMakeLists.txt
tests/include/: test.h
